Propagate construction exceptions